// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graph_getPaths 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "node": Object {
            "id": "baz",
          },
        },
      ],
      "node": Object {
        "id": "foo",
      },
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "node": Object {
            "id": "baz",
          },
        },
      ],
      "node": Object {
        "id": "bar",
      },
    },
  ],
  "node": Object {
    "id": "target",
  },
}
`;

exports[`graph_getPaths 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "node": Object {
            "id": "baz",
          },
        },
      ],
      "node": Object {
        "id": "foo",
      },
    },
  ],
  "node": Object {
    "id": "target",
  },
}
`;
